# math

./: CMakeLists.txt  README.md  test.cpp
.github/workflows/: build.yml
include/math/: Matrix.h  MatrixX.h  Vector.h  geometry.h  math.h  numbers.h  util.h
tests/: CMakeLists.txt  test_geometry.cpp  test_matrix.cpp  test_matrixx.cpp  test_numbers.cpp  test_vector.cpp
